hphp/hack/test/typecheck/using/using_bad_syntax_3.php.exp
File "using_bad_syntax_3.php", line 19, characters 5-40:
Using statement in function scoped form may only be used at the top level of a function or a method (Parsing[1002])
